Fix weird top padding on firefox

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,6 @@ footer {
   display: inline-block;
   position: relative;
   width: 100%;
-  height: 100%;
   background-color: #f7f6f2;
 }
 
